--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="col mt-3">
           <a href="img/gallery/14.jpg" data-toggle="lightbox" data-caption="Erick & Nabila 6"
             data-gallery="mygallery">
-            <img src="img/gallery/14.jpg" alt="Erick & Nabila 6" class="img-fluid w-100 rounded">
+            <img src="img/gallery/14.JPG" alt="Erick & Nabila 6" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
@@ -287,7 +287,7 @@
         <div class="col mt-3">
           <a href="img/gallery/12.jpg" data-toggle="lightbox" data-caption="Erick & Nabila 8"
             data-gallery="mygallery">
-            <img src="img/gallery/12.jpg" alt="Erick & Nabila 8" class="img-fluid w-100 rounded">
+            <img src="img/gallery/12.JPG" alt="Erick & Nabila 8" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
