--- a/index.html
+++ b/index.html
@@ -119,10 +119,6 @@
             width="100%" height="480" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-          <!-- <a href="https://goo.gl/maps/R9seweCadg9MNyox5" target="_blank" class="btn btn-light btn-sm my-3">Klik untuk
-            membuka peta</a> -->
-          <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak
-            ada tanda-tanda sedang dilangsungkan pernikahan, boleh jadi Anda salah jadwal, atau salah tempat.</p>
         </div>
       </div>
 
@@ -145,6 +141,9 @@
             <div class="card-footer">
               Akad dan Resepsi akan dilangsungkan pada kediaman mempelai Wanita (Rumah Bpk. Muksin & Ibu Ikah).
             </div>
+            <div class="card-footer">
+              Jl. Baru Babakan, RT 023 / RW 009, Dusun Kliwon, Desa Sampora, Kec. Cilimus.
+            </div>
           </div>
         </div>
         <div class="col-md-5 col-10">
@@ -164,6 +163,9 @@
             </div>
             <div class="card-footer">
               Acara Resepsi yang akan diselenggarakan pada kediaman Laki-laki (Rumah Bpk. Wawan & Ibu Leli).
+            </div>
+            <div class="card-footer">
+              Jl. Kalijaga Komplek Kavling Guru, Dusun Pon A, RT.14 RW.04 Desa Caracas, Kec. Cilimus, Kab. Kuningan..
             </div>
           </div>
         </div>
